--- a/src/booknaviger/resources/ReadComponent.properties
+++ b/src/booknaviger/resources/ReadComponent.properties
@@ -1,2 +1,5 @@
 # image of loading
 loading_image=/booknaviger/resources/graphics/loading.png
+
+# image can't be loaded
+no_image=/booknaviger/resources/graphics/noPreview.png
