First / Last page reached indication
Tried to add Mac OS X gestures, but it doesn't work, don't know why….
Closes #1

--- a/src/booknaviger/resources/ReadComponent.properties
+++ b/src/booknaviger/resources/ReadComponent.properties
@@ -3,3 +3,7 @@ loading_image=/booknaviger/resources/graphics/loading.png
 
 # image can't be loaded
 no_image=/booknaviger/resources/graphics/noPreview.png
+
+# first / last page reached
+firstPage.text=First Page Reached
+lastPage.text=Last page reached
