Right click menu created. Minimize partially available
App logo is now in property instead of hardcode.
Fixed #5 for rotation with french / non-french keyboard
A small fix on page drawing and fitToScreen #1

--- a/src/booknaviger/resources/Application.properties
+++ b/src/booknaviger/resources/Application.properties
@@ -6,3 +6,4 @@ homepage=Homepage
 appVersion=1.4.2
 appVendor=Inervo
 appHomepage=https://github.com/Inervo/BookNaviger
+appLogoIcon=/booknaviger/resources/graphics/logo.png
