Main is now in a different class. Splash screen included. Close #10.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.desc=Software for book navigation and reading
+application.splash=splash.png
 application.title=BookNaviger
 application.vendor=Inervo
 build.classes.dir=${build.dir}/classes
@@ -69,7 +70,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=booknaviger.MainInterface
+main.class=booknaviger.BookNaviger
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
