List of pages while reading. Close #13

--- a/src/booknaviger/resources/ReadInterface.properties
+++ b/src/booknaviger/resources/ReadInterface.properties
@@ -7,6 +7,7 @@ tenPagesBeforeReadInterfaceMenuItemText=10 pages before
 tenPagesAfterReadInterfaceMenuItemText=10 pages after
 firstPageReadInterfaceMenuItemText=First page
 lastPageReadInterfaceMenuItemText=Last page
+listPagesReadInterfaceMenuItemText=List of the pages
 
 # display options
 displayReadInterfaceMenuText=Display
