Some optimisation on the profiles. #20

--- a/src/booknaviger/resources/ProfileDialog.properties
+++ b/src/booknaviger/resources/ProfileDialog.properties
@@ -1,2 +1,6 @@
-# book folder chooser jdialog
-books-folder_title_jdialog=Choose the folder where books series are...
+#profiles jdialog title
+profileDialogString=List of the profiles
+
+#new profile / delete profile button string
+newProfileButtonString=New profile
+deleteProfileButtonString=Delete profile
