HTML report is now finished. Close #6
Multi pages to limit the number of thumbnail on the report (for
hangout).
Continue to generate the report even when an error occurs during the
creation of the thumbnail.

--- a/src/booknaviger/resources/ReportGenerator.properties
+++ b/src/booknaviger/resources/ReportGenerator.properties
@@ -6,6 +6,8 @@ nbrOfSeries.text=series
 nbrOfAlbums.text=albums
 MB.text=MB
 GB.text=GB
+previousPage.text=Previous Page
+nextPage.text=NextPage
 
 
 # progress informations resources
