#26 #25 #8 in progress. Not finished (far from it)

--- a/src/booknaviger/resources/InfoInterface.properties
+++ b/src/booknaviger/resources/InfoInterface.properties
@@ -10,4 +10,5 @@ infoInterface.error.title=Error
 
 
 # errorMessages
-
+rights.title=Can not read a file / folder (rights problem)
+rights.message=The file / folder "{0}" cannot be read because of the rights
