--- a/src/booknaviger/resources/InfoInterface.properties
+++ b/src/booknaviger/resources/InfoInterface.properties
@@ -12,3 +12,7 @@ infoInterface.error.title=Error
 # errorMessages
 rights.title=Can not read a file / folder (rights problem)
 rights.message=The file / folder "{0}" cannot be read because of the rights
+report-files.title=Error with the files during the reporting
+report-files.message=An error occured with the files during the reporting (the files have not been found or the encoding was unsupported)
+report-IO.title=IO error during the reporting
+report-IO.message=An Input/output error occured during the reporting
