--- a/src/booknaviger/resources/InfoInterface.properties
+++ b/src/booknaviger/resources/InfoInterface.properties
@@ -7,7 +7,8 @@ infoInterface.error.title=Error
 
 
 # warningMessages
-
+update-parseerror.title=Couldn't check new version
+update-parseerror.message=Couldn't parse the message from the server about a new version
 
 # errorMessages
 rights.title=Can not read a file / folder (rights problem)
@@ -16,3 +17,5 @@ report-files.title=Error with the files during the reporting
 report-files.message=An error occured with the files during the reporting (the files have not been found or the encoding was unsupported)
 report-IO.title=IO error during the reporting
 report-IO.message=An Input/output error occured during the reporting
+file-read.title=Can't read the file
+file-read.message=The file "{0}" can't be read. See the log for more details
