--- a/src/booknaviger/resources/Application.properties
+++ b/src/booknaviger/resources/Application.properties
@@ -7,3 +7,4 @@ appVersion=1.4.2
 appVendor=Inervo
 appHomepage=https://github.com/Inervo/BookNaviger
 appLogoIcon=/booknaviger/resources/graphics/logo.png
+appUpdateFeedURL=http://code.google.com/feeds/p/booknaviger/downloads/basic
