Close #8, Close #25, Close #26

--- a/src/booknaviger/resources/InfoInterface.properties
+++ b/src/booknaviger/resources/InfoInterface.properties
@@ -19,3 +19,7 @@ report-IO.title=IO error during the reporting
 report-IO.message=An Input/output error occured during the reporting
 file-read.title=Can't read the file
 file-read.message=The file "{0}" can't be read. See the log for more details
+properties-load.title=The properties couldn't be loaded.
+properties-load.message=The properties file ({0}) couldn't be loaded. See the log for more details
+properties-save.title=The properties couldn't be saved.
+properties-save.message=The properties file ({0}) couldn't be saved. See the log for more details
