--- a/src/booknaviger/resources/InfoInterface.properties
+++ b/src/booknaviger/resources/InfoInterface.properties
@@ -23,3 +23,5 @@ properties-load.title=The properties couldn't be loaded.
 properties-load.message=The properties file ({0}) couldn't be loaded. See the log for more details
 properties-save.title=The properties couldn't be saved.
 properties-save.message=The properties file ({0}) couldn't be saved. See the log for more details
+image-convert.title=The image read can't be shown
+image-convert.message=The image read can't be converted to render in the application. See log for more details
