Fixed some bugs. Close #32
Initiated #35 : finally choose to try catch massiv code and redirect to
logger

--- a/src/booknaviger/resources/InfoInterface.properties
+++ b/src/booknaviger/resources/InfoInterface.properties
@@ -25,3 +25,5 @@ properties-save.title=The properties couldn't be saved.
 properties-save.message=The properties file ({0}) couldn't be saved. See the log for more details
 image-convert.title=The image read can't be shown
 image-convert.message=The image read can't be converted to render in the application. See log for more details
+unknown.title=An unknown error occured
+unknown.message=An unknown error occured. See log for more details
