Updated the webpage URL

--- a/src/booknaviger/resources/Application.properties
+++ b/src/booknaviger/resources/Application.properties
@@ -5,6 +5,6 @@ vendor=Vendor
 homepage=Homepage
 appVersion=1.5
 appVendor=Inervo
-appHomepage=https://github.com/Inervo/BookNaviger
+appHomepage=http://inervo.github.io/BookNaviger/
 appLogoIcon=/booknaviger/resources/graphics/logo.png
 appUpdateFeedURL=http://code.google.com/feeds/p/booknaviger/downloads/basic
