--- a/src/booknaviger/resources/Application.properties
+++ b/src/booknaviger/resources/Application.properties
@@ -7,4 +7,4 @@ appVersion=1.5
 appVendor=Inervo
 appHomepage=http://inervo.github.io/BookNaviger/
 appLogoIcon=/booknaviger/resources/graphics/logo.png
-appUpdateFeedURL=http://code.google.com/feeds/p/booknaviger/downloads/basic
+appUpdateFeedURL=https://github.com/Inervo/BookNaviger/releases.atom
