Read menu added. Close #40

--- a/src/booknaviger/resources/MainInterface.properties
+++ b/src/booknaviger/resources/MainInterface.properties
@@ -10,6 +10,7 @@ books-folder_menu=Folder of books series
 exit_menu=Exit
 
 # controls Menu
+read_menu=Read
 resume_menu=Resume
 profile-list_menu=Profiles
 profiles_menu=Profiles
